# awiwi.vim

./: .gitattributes  .gitignore  CLAUDE.md
.claude/: settings.json
.githooks/: pre-commit
autoload/: awiwi.vim
docs/: INDEX.md  architecture.md  data-model.md  decisions.md  glossary.md  knowledge-base.md
ftdetect/: awiwi.lua  awiwi.vim
ftplugin/: awiwi.lua  awiwi.vim
handovers/: STATE.md  (+1 more)
mockups/: 404.html  (+14 more)
server/: app.py  pyproject.toml  requirements.txt
server/frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
server/frontend/src/: App.svelte  app.css
server/frontend/src/lib/: api.ts  breadcrumbs.svelte.ts  drawioViewer.ts  format.spec.ts  format.ts  lang.spec.ts  lang.ts  mime.ts  router.spec.ts  router.svelte.ts  searchHighlight.spec.ts  searchHighlight.ts  searchState.spec.ts  searchState.ts  theme.svelte.ts  weekBands.spec.ts  weekBands.ts  ws.spec.ts  ws.svelte.ts
server/frontend/src/lib/components/: Breadcrumbs.svelte  ConnectionDot.svelte  CopyMenu.svelte  DirPage.svelte  DocPage.svelte  DownloadCard.svelte  DrawioView.svelte  EmptyState.svelte  ImageView.svelte  JournalPage.svelte  Lightbox.svelte  MarkdownView.svelte  PresentationMode.spec.ts  PresentationMode.svelte  SearchBar.svelte  SearchPage.svelte  TextFileView.svelte  ThemeToggle.svelte  TodoPage.svelte
server/frontend/src/lib/enhance/: checkbox.ts  clipboard.ts  copyButtons.ts  drawio.spec.ts  drawio.ts  imageLinks.spec.ts  imageLinks.ts  index.ts  lightbox.ts  media.spec.ts  media.ts  mermaid.ts  paths.ts  redaction.spec.ts  redaction.ts  shiki.ts  tableExport.spec.ts  tableExport.ts  tables.ts  tocSpy.ts
server/frontend/src/lib/presentation/: fragments.spec.ts  fragments.ts  slides.spec.ts  slides.ts
server/frontend/src/routes/: Asset.svelte  Dir.svelte  Home.svelte  Journal.svelte  NotFound.svelte  Recipes.svelte  Search.svelte  Todo.svelte
server/html/: base.html.j2  dir.html.j2  journal.html.j2  main.html.j2  non-journal.html.j2  search-content.html.j2
server/src/awiwi/: __init__.py  app.py  checkbox.py  config.py  content.py  docs.py  httputil.py  mdrender.py  schemas.py  search.py  templating.py  watch.py
server/src/awiwi/routers/: __init__.py  actions.py  api.py  assets.py  pages.py  redirects.py
server/static/css/: common.css  default-dark.css  default-light.css  default.css  short.css  solarized-dark.css
server/static/js/: common.js  custom-reveal.js  mermaid-module.js  mermaid.js  sortable-tables.js
server/templates/: non-journal.html.j2
server/tests/: conftest.py  test_acceptance.py  test_api.py  test_checkbox.py  test_config.py  test_content.py  test_mdrender.py  test_search.py  test_watch.py
server/tests/visual/: README.md  pairs.json  shoot.mjs
server/tests/visual/fixture/home/assets/2026/07/14/: deploy-notes.txt  request-flow.drawio
server/tests/visual/fixture/home/journal/: todos.md
server/tests/visual/fixture/home/journal/2026/07/: 2026-07-06.md  2026-07-07.md  2026-07-09.md  2026-07-10.md  2026-07-13.md  2026-07-14.md  2026-07-15.md
server/tests/visual/fixture/home/recipes/: sourdough-starter.md
server/tests/visual/fixture/home/recipes/ops/: rotate-credentials.md
(+124 files in other folders)
