[project]
name = "awiwi"
version = "0.1.0"
description = "Server for Awīwī journaling system."
requires-python = ">=3.13"
# Production dependencies are pinned to minor versions (~=) to prevent
# silent breaking upgrades on fresh installs. Run `uv sync` after any
# intentional upgrade and update the specifier here.
dependencies = [
  "fastapi",
  "pydantic",
  "pydantic-settings",
  "markdown",
  "uvicorn",
  "watchfiles",
  "websockets",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "basedpyright",
    "httpx",
]

[build-system]
requires = ["uv_build>=0.9.10, <0.10.0", "wheel"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
cache-dir = "~/.cache/ruff"
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
# fix = true
show-fixes = true

# Same as Black.
line-length = 90
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["F", "E", "W", "C901"]
ignore = ["E203", "E266", "E501", "F403", "F401"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^_$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = true

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 18

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
    # Allow Pydantic's `@validator` decorator to trigger class method treatment.
    "pydantic.validator",
    # Allow SQLAlchemy's dynamic decorators, like `@field.expression`, to trigger class method treatment.
    "declared_attr",
    "expression",
    "comparator",
]

